0.6.5 (2015-01-09)
    * Update documentation to explicitly mention support for pip options
    * Document ``file_to_package`` error handling, more explicit error when
      building an index from a directory with non-package files.

0.6.4 (2014-08-03)
    * Fix parsing of package file names which include a dash in version number
      (https://github.com/wolever/pip2pi/pull/29; thanks @cl3m0)

0.6.3 (2014-08-03)
    * Add --no-symlink option
      (https://github.com/wolever/pip2pi/pull/28; thanks @georgevreilly)

0.6.2 (2014-03-04)
    * Add pip version sniffing to detect when we need to download wheels
      versus when pip will do it correctly.

0.6.1 (2014-03-03)
    * Remove pip2whl command
    * Fixed wheel support so dependencies are correctly downloaded

0.6.0 (2014-03-02)
    * Add support for whl files
      (https://github.com/wolever/pip2pi/pull/24; thanks @tgross)

0.5.0 (2013-12-04)
    
    * Add install_requires on pip>=1.1

0.4.0 (2013-11-23)
    
    * Added preliminary Python 3 support
      (https://github.com/wolever/pip2pi/pull/18; thanks @wogg).

0.3.0 (2013-11-10)

    * Added Windows support, use setup.py ``console_scripts``
      (https://github.com/wolever/pip2pi/pull/17; thanks @georgevreilly).

0.2.1 (2013-06-08)

    * dir2pi will now do sensible things when it encounters egg files
      (https://github.com/wolever/pip2pi/pull/8; thanks @georgevreilly).
    * Added the start of a test suite.

0.2.0 (2013-05-30)

    * pip2pi now generates an index.html file in the package directory
      (https://github.com/wolever/pip2pi/pull/7; thanks @venkatraju).
    * Added explicit simplified BSD license.